fix: return created flight ID in api, add get endpoint
